--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="main.js"></script>
 </head>
+<body>
+    <span id="money>0</span>
+    <button onclick="moneyButton"></button>   
+</body>
 </html>
