--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <span id="money>0</span>
+    <span id="money">0</span>
     <button onclick="moneyButton"></button>   
 </body>
 </html>
