--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="main.js"></script>
+    <title>Idle Clicker</title>
 </head>
 <body>
+    <h1>Idle Game</h1>
     <span id="money">0</span>
     <button onclick="moneyButton"></button>   
+    <main>
+        <canvas></canvas>
+    </main>   
 </body>
 </html>
