--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Idle Game</h1>
     <span id="money">0</span>
-    <button onclick="moneyButton"></button>   
+    <button onclick="moneyButton">Click!</button>   
     <main>
         <canvas></canvas>
     </main>   
