--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="main.js"></script>
     <title>Idle Clicker</title>
 </head>
@@ -9,8 +8,6 @@
     <h1>Idle Game</h1>
     <span id="money">0</span>
     <button onclick="moneyButton">Click!</button>   
-    <main>
-        <canvas></canvas>
-    </main>   
+    <canvas id=</canvas>  
 </body>
 </html>
