--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Idle Game</h1>
     <span id="money">0</span>
     <button onclick="moneyButton">Click!</button>   
-    <canvas id=</canvas>  
+    <canvas></canvas>  
 </body>
 </html>
