--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <script src="main.js"></script>
-    <title>Idle Clicker</title>
-</head>
-<body>
-    <h1>Idle Game</h1>
-    <span id="money">0</span>
-    <button onclick="moneyButton">Click!</button>   
-    <canvas></canvas>  
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="interface.css" />
+	</head>
+	<body>
+		<button onclick="moneyClick(1)">Click Me!</button>
+		<br />
+		Money: <span id="money">0</span>
+		<br />
+		<button onclick="getGun()">Get Gun</button>
+		<br />
+		Guns: <span id="guns">0</span>
+		<br />
+		Gun Cost: <span id="gunCost">10</span>
+		<script type="text/javascript" src="main.js"></script>
+	</body>
 </html>
