--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		Guns: <span id="guns">0</span>
 		<br />
 		Gun Cost: <span id="gunCost">10</span>
+		<br />
+		Gun Production: <span id="gunProd">1</span>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
